--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,9 @@
         "no-console": 0,
         "no-use-before-define":0,
         "no-undef": 0,
-        "no-unused-vars": 0,
-        "no-plusplus": 0
+        "no-unused-vars": 1,
+        "no-plusplus": 0,
+        "max-len": 0,
+        "no-underscore-dangle":0
     }
 }
